tests/NormalTests/paczka1/small_fuzzy/65067918.err
Error in line 1: S?09 A202 42,?
Error in line 4: hA5SPfEY A202 31,0
Error in line 9: S509 A202 159,9
Error in line 11: S509 S546 64,8
